Renaming from CONAN to conan to match GPS repo

--- a/data/conan_for_VAE_extractor.ipynb
+++ b/data/conan_for_VAE_extractor.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "candidates = df_english[\"counterSpeech\"]\n",
-    "with open(\"CONAN_for_VAE.txt\", \"w\") as f:\n",
+    "with open(\"conan_for_VAE.txt\", \"w\") as f:\n",
     "    for candidate in candidates:\n",
     "        f.write(candidate + \"\\n\")"
    ]
